examples/test/testpolicy13340.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13340
  namespace: namespace323
spec:
  podSelector:
    matchLabels:
      key35: value47
      key23: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value21
          key10: value44
      podSelector:
        matchLabels:
          key13: value20
          key7: value18
          key41: value43
